ping_pong/manifests/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercises
  name: postgres-svc
spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
