ping_pong/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: exercises
  name: ping-pong-route
spec:
  parentRefs:
    - name: log-output-ping-pong-gateway
  rules:
    - matches:
        - path:
            type: Exact
            value: /pingpong
      backendRefs:
        - name: ping-pong-svc
          port: 80
